--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -138,6 +138,12 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- In-memory DB for unit tests -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Structured Logging -->
         <dependency>
