fix gateway ci cd

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,7 +58,8 @@ jobs:
 
       - name: Run tests and Generate coverage report
         working-directory: ./gateway
-        run: mvn -B clean test jacoco:report
+        # Use fully-qualified plugin goal to avoid "No plugin found for prefix 'jacoco'" errors
+        run: mvn -B -f gateway/pom.xml clean test org.jacoco:jacoco-maven-plugin:0.8.10:report
   
   # Test QR Service
   test-qr-service:
