--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -149,8 +149,11 @@ jobs:
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
           echo "QR_SERVICE_SECRET=${{ secrets.QR_SERVICE_SECRET }}" >> .env
       
-      - name: Set up Docker Compose
-        uses: docker/compose-action@v4
+      - name: Install Docker Compose plugin
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose-plugin
+          docker compose version
 
       - name: Start services
         run: docker compose up -d
